[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Transition_Screen.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/Contra.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Images/Prototypes/Transition_Screen.png" type="Texture" id=3]

[sub_resource type="Theme" id=1]

[sub_resource type="DynamicFont" id=2]
size = 33
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="Transition_Screen" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 799.0
color = Color( 0, 0, 0, 1 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 512, 284 )
texture = ExtResource( 3 )

[node name="FinalScreen" type="Node2D" parent="."]
position = Vector2( 219, 303 )
scale = Vector2( 1, 0.8 )

[node name="Hi" type="Label" parent="FinalScreen"]
margin_left = 133.0
margin_top = -112.0
margin_right = 204.0
margin_bottom = -74.0
theme = SubResource( 1 )
custom_colors/font_color = Color( 0.647059, 0.647059, 0.647059, 1 )
custom_fonts/font = SubResource( 2 )
text = "HI"

[node name="InfoP1" type="Label" parent="FinalScreen"]
margin_left = -125.0
margin_top = -286.0
margin_right = -28.0
margin_bottom = -248.0
theme = SubResource( 1 )
custom_colors/font_color = Color( 0.647059, 0.647059, 0.647059, 1 )
custom_fonts/font = SubResource( 2 )
text = "1p"

[node name="Stage" type="Label" parent="FinalScreen"]
margin_left = 195.0
margin_top = 129.0
margin_right = 426.0
margin_bottom = 173.0
theme = SubResource( 1 )
custom_colors/font_color = Color( 0.647059, 0.647059, 0.647059, 1 )
custom_fonts/font = SubResource( 2 )
text = "Stage 1"

[node name="Stage2" type="Label" parent="FinalScreen"]
margin_left = 196.0
margin_top = 198.0
margin_right = 400.0
margin_bottom = 246.0
theme = SubResource( 1 )
custom_colors/font_color = Color( 0.647059, 0.647059, 0.647059, 1 )
custom_fonts/font = SubResource( 2 )
text = "Jungle"

[node name="Lives" type="Label" parent="FinalScreen"]
margin_left = -127.0
margin_top = -216.0
margin_right = 116.0
margin_bottom = -178.0
theme = SubResource( 1 )
custom_colors/font_color = Color( 0.647059, 0.647059, 0.647059, 1 )
custom_fonts/font = SubResource( 2 )
text = "Rest  3"

[node name="InfoP2" type="Label" parent="FinalScreen"]
visible = false
margin_left = 391.0
margin_top = -286.25
margin_right = 469.0
margin_bottom = -248.25
theme = SubResource( 1 )
custom_colors/font_color = Color( 0.647059, 0.647059, 0.647059, 1 )
custom_fonts/font = SubResource( 2 )
text = "2p"

[node name="Lives2" type="Label" parent="FinalScreen"]
visible = false
margin_left = 391.0
margin_top = -216.25
margin_right = 691.0
margin_bottom = -178.25
theme = SubResource( 1 )
custom_colors/font_color = Color( 0.647059, 0.647059, 0.647059, 1 )
custom_fonts/font = SubResource( 2 )
text = "Rest  3"

[node name="Flash" type="Node2D" parent="FinalScreen"]

[node name="Score" type="Label" parent="FinalScreen/Flash"]
margin_left = 255.0
margin_top = -113.75
margin_right = 496.0
margin_bottom = -75.75
theme = SubResource( 1 )
custom_colors/font_color = Color( 0.647059, 0.647059, 0.647059, 1 )
custom_fonts/font = SubResource( 2 )
text = "29500"
align = 1
valign = 1

[node name="Points" type="Label" parent="FinalScreen/Flash"]
margin_left = 165.0
margin_top = -286.0
margin_right = 254.0
margin_bottom = -248.0
theme = SubResource( 1 )
custom_colors/font_color = Color( 0.647059, 0.647059, 0.647059, 1 )
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="Points2" type="Label" parent="FinalScreen/Flash"]
visible = false
margin_left = 682.0
margin_top = -286.25
margin_right = 724.0
margin_bottom = -248.25
theme = SubResource( 1 )
custom_colors/font_color = Color( 0.647059, 0.647059, 0.647059, 1 )
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
